refactored server code

--- a/server/config.env
+++ b/server/config.env
@@ -1,4 +1,9 @@
-PORT=8000
-OPENAI_API_KEY=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
-
-
+SERVER_PORT=8080
+DATABASE_HOST=postgres
+DATABASE_PORT=5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=postgres
+DATABASE_NAME=tagore
+DATABASE_SSLMODE=disable
+LOG_LEVEL=debug
+LOG_OUTPUT=stdout
