--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,26 @@ services:
         condition: service_healthy
     networks:
       - tagore
+
+  tagore-web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile.dev
+    environment:
+      - NEXT_PUBLIC_BASE_PATH=/.factly/mande/web
+      - NEXT_PUBLIC_API_URL=http://tagore-server:8080
+    ports:
+      - "3000:3000"
+    volumes:
+      - type: bind
+        source: ./web
+        target: /app
+      - /app/node_modules
+      - /app/.next
+    restart: unless-stopped
+    stdin_open: true
+    networks:
+      - tagore
+
 networks:
   tagore:
