--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@factly/scooter": "^0.0.12",
+    "@factly/scooter-core": "^0.0.4",
     "@next/font": "13.1.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
