--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -1,14 +1,19 @@
-FROM node:16-alpine
+# pull official base image
+FROM node:17-alpine
 
-
-RUN mkdir -p /app
+# set working directory
 WORKDIR /app
 
-
-COPY . /app
+# install app dependencies
+COPY package.json .
 
 RUN npm install --legacy-peer-deps
+RUN npm install react-scripts --legacy-peer-deps
 
+# add app
+COPY . .
 
-# Running the app
-CMD "npm" "run" "dev"
+EXPOSE 3000
+
+# start app
+CMD ["npm", "start"]
