--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       dockerfile: Dockerfile.dev
     environment:
       - NEXT_PUBLIC_BASE_PATH=/.factly/mande/web
-      - NEXT_PUBLIC_API_URL=http://tagore-server:8080
+      - REACT_APP_TAGORE_API_URL=http://localhost:8080
     ports:
       - "3000:3000"
     volumes:
