--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -9,4 +9,4 @@ RUN go mod download
 
 RUN go install github.com/githubnemo/CompileDaemon@latest
 
-ENTRYPOINT CompileDaemon -exclude-dir=.git -exclude-dir=docs --build="go build cmd/main.go" --command="./main serve"
+ENTRYPOINT CompileDaemon -exclude-dir=.git -exclude-dir=docs --build="go build main.go" --command="./main serve"
