--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./pg-init-scripts:/docker-entrypoint-initdb.d
+      - ./server/pg-init-scripts:/docker-entrypoint-initdb.d
       - ./volumes/postgresql:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=postgres
@@ -66,9 +66,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - type: bind
-        source: ./web
-        target: /app
+      - ./web:/app
     restart: unless-stopped
     stdin_open: true
     networks:
