--- a/web/package.json
+++ b/web/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "dependencies": {
     "@factly/scooter-core": "^0.0.13",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.4.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
