--- a/web/package.json
+++ b/web/package.json
@@ -4,25 +4,30 @@
   "private": true,
   "dependencies": {
     "@factly/scooter-core": "^0.0.15",
+    "@material-tailwind/react": "^2.0.0",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uppy/core": "^3.2.0",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-input": "^0.1.11",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.7",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.4",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.2",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "sse": "^0.0.8",
     "sse.js": "github:mpetazzoni/sse.js",
     "web-vitals": "^2.1.4"
   },
