--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,21 +56,21 @@ services:
       - tagore
 
 
-  tagore-web:
-    build:
-      context: ./web
-      dockerfile: Dockerfile.dev
-    environment:
-      - NEXT_PUBLIC_BASE_PATH=/.factly/mande/web
-      - REACT_APP_TAGORE_API_URL=http://localhost:8080
-    ports:
-      - "3000:3000"
-    volumes:
-      - ./web:/app
-    restart: unless-stopped
-    stdin_open: true
-    networks:
-      - tagore
+  # tagore-web:
+  #   build:
+  #     context: ./web
+  #     dockerfile: Dockerfile.dev
+  #   environment:
+  #     - NEXT_PUBLIC_BASE_PATH=/.factly/mande/web
+  #     - REACT_APP_TAGORE_API_URL=http://localhost:8080
+  #   ports:
+  #     - "3000:3000"
+  #   volumes:
+  #     - ./web:/app
+  #   restart: unless-stopped
+  #   stdin_open: true
+  #   networks:
+  #     - tagore
                
 networks:
   tagore:
