--- a/web/Dockerfile.dev
+++ b/web/Dockerfile.dev
@@ -7,6 +7,8 @@ WORKDIR /app
 # install app dependencies
 COPY package.json .
 
+RUN apk update && apk add git
+
 RUN npm install --legacy-peer-deps
 RUN npm install react-scripts --legacy-peer-deps
 
