--- a/web/package.json
+++ b/web/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@factly/scooter-core": "^0.0.13",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@factly/scooter": "^0.0.12",
+    "@factly/scooter-core": "^0.0.18",
     "@material-tailwind/react": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
