--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,22 +56,22 @@ services:
       - tagore
 
 
-  # tagore-web:
-  #   build:
-  #     context: ./web
-  #     dockerfile: Dockerfile.dev
-  #   environment:
-  #     - PUBLIC_URL=http://127.0.0.1:4455/.factly/tagore/web
-  #     - REACT_APP_PUBLIC_URL=/.factly/tagore/web
-  #     - REACT_APP_TAGORE_API_URL=http://localhost:8080
-  #   ports:
-  #     - "3000:3000"
-  #   volumes:
-  #     - ./web:/app
-  #   restart: unless-stopped
-  #   stdin_open: true
-  #   networks:
-  #     - tagore
+  tagore-web:
+    build:
+      context: ./web
+      dockerfile: Dockerfile.dev
+    environment:
+      - PUBLIC_URL=http://127.0.0.1:4455/.factly/tagore/web
+      - REACT_APP_PUBLIC_URL=/.factly/tagore/web
+      - REACT_APP_TAGORE_API_URL=http://localhost:8080
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./web:/app
+    restart: unless-stopped
+    stdin_open: true
+    networks:
+      - tagore
 
 
   ###########################################################################
