--- a/web/package.json
+++ b/web/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "dependencies": {
     "@factly/scooter-core": "^0.0.13",
-    "@reduxjs/toolkit": "^1.9.5",
     "@material-tailwind/react": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/typography": "^0.5.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uppy/aws-s3": "^3.0.5",
     "@uppy/core": "^3.2.0",
+    "@uppy/google-drive": "^3.1.1",
+    "@uppy/image-editor": "^2.1.2",
+    "@uppy/react": "^3.1.0",
+    "@uppy/url": "^3.2.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
