--- a/server/Dockerfile.migrate
+++ b/server/Dockerfile.migrate
@@ -7,5 +7,5 @@ COPY . .
 RUN apk add gcc musl-dev
 RUN go mod download
 
-ENTRYPOINT go build main.go && ./main migrate
+ENTRYPOINT go build main.go && ./main migrate && ./main create-default-personas
 
