--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,7 @@ services:
     environment:
       - PUBLIC_URL=http://127.0.0.1:4455/.factly/tagore/web
       - REACT_APP_PUBLIC_URL=/.factly/tagore/web
-      - REACT_APP_TAGORE_API_URL=http://localhost:8080
+      - REACT_APP_TAGORE_API_URL=http://127.0.0.1:4455/.factly/tagore/server
       - REACT_APP_COMPANION_URL=http://localhost:3020
     ports:
       - "3000:3000"
