--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-      - name: Authenticate with Google Cloud
+      - id: auth
+        name: Authenticate with Google Cloud
         uses: google-github-actions/auth@v0
         with:
           token_format: access_token
