--- a/.github/workflows/web-releaser.yml
+++ b/.github/workflows/web-releaser.yml
@@ -1,4 +1,4 @@
-name: Release CI
+name: Web Release CI
 on:
   push:
     tags:
@@ -14,7 +14,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Set env
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-    - name: Authenticate with Google Cloud
+    - id: auth
+      name: Authenticate with Google Cloud
       uses: google-github-actions/auth@v0
       with:
         token_format: access_token
