--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,7 +20,7 @@ dockers:
 - dockerfile: server/Dockerfile.prod
   image_templates:
     - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:{{ .Tag }}"
-    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest"
+    # - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest"
 
   use: docker
   build_flag_templates:
@@ -30,7 +30,7 @@ docker_manifests:
   - 
     image_templates:
     - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:{{ .Version }}"
-    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest"
+    # - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest"
 
 checksum:
   name_template: 'checksums.txt'
