--- a/web/package.json
+++ b/web/package.json
@@ -27,7 +27,7 @@
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slider": "^2.0.4",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
