--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -53,5 +53,4 @@ jobs:
           version: v1.8.3
           args: release --rm-dist
         env:
-          # GITHUB_TOKEN: ${{ secrets.GH_PAT }}   
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
