--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -19,8 +19,8 @@ builds:
 dockers:
 - dockerfile: server/Dockerfile.prod
   image_templates:
-    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:{{ .Tag }}-releaser"
-    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest-releaser"
+    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:{{ .Tag }}"
+    - "asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-server:latest"
 
   use: docker
   build_flag_templates:
