added dockerfile.prod for tagore web

--- a/.github/workflows/web-releaser.yml
+++ b/.github/workflows/web-releaser.yml
@@ -34,4 +34,4 @@ jobs:
         push: true
         tags: asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-web:${{ env.RELEASE_VERSION }},asia-south1-docker.pkg.dev/factly-prod/tagore/tagore-web:latest
         context: web
-        file: web/Dockerfile.dev
+        file: web/Dockerfile.prod
