--- a/web/Dockerfile.prod
+++ b/web/Dockerfile.prod
@@ -1,6 +1,8 @@
 FROM node:18-alpine as build
 WORKDIR /app
 
+RUN apk update && apk add git
+
 # install node modules
 COPY ./package.json ./
 COPY ./package-lock.json ./
