added nats implemetation for usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -329,5 +329,20 @@ services:
       - "4437:4437"
     networks:
       - tagore
+
+
+  
+  ###########################################################################
+  #######             MESSAGING BROKER                                 #######
+  ###########################################################################
+  nats:
+    image: nats:2.9.20
+    ports:
+      - "4222:4222"
+      - "6222:6222"
+      - "8222:8222"
+    networks:
+      - tagore
+
 networks:
   tagore:
