--- a/server/config.env
+++ b/server/config.env
@@ -7,3 +7,7 @@ DATABASE_NAME=tagore
 DATABASE_SSLMODE=disable
 LOG_LEVEL=debug
 LOG_OUTPUT=stdout
+PUBSUB_URL=nats://nats:4222
+PUBSUB_PROVIDER=nats
+
+
