--- a/web/package.json
+++ b/web/package.json
@@ -18,9 +18,11 @@
     "@uppy/react": "^3.1.0",
     "@uppy/url": "^3.2.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "classnames": "^2.3.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-input": "^0.1.11",
     "react-icons": "^4.8.0",
