--- a/web/package.json
+++ b/web/package.json
@@ -34,6 +34,7 @@
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.7.2",
     "redux-thunk": "^2.4.2",
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
