--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-dropdown-input": "^0.1.11",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
