--- a/server/config.env
+++ b/server/config.env
@@ -9,5 +9,6 @@ LOG_LEVEL=debug
 LOG_OUTPUT=stdout
 PUBSUB_URL=nats://nats:4222
 PUBSUB_PROVIDER=nats
-
+SCRAPER_API_KEY=abc
+SCRAPER_API_URL=https://api.diffbot.com
 
