--- a/server/config.env
+++ b/server/config.env
@@ -9,6 +9,6 @@ LOG_LEVEL=debug
 LOG_OUTPUT=stdout
 PUBSUB_URL=nats://nats:4222
 PUBSUB_PROVIDER=nats
-SCRAPER_API_KEY=abc
+SCRAPER_API_KEY=b3d51815022a4abc8c6f6d6a1dce3a9e
 SCRAPER_API_URL=https://api.diffbot.com
 
